[gd_scene load_steps=8 format=3 uid="uid://bvw3mfqqib60f"]

[ext_resource type="Script" path="res://BaseEnemy.gd" id="1_pgksw"]
[ext_resource type="Texture2D" uid="uid://c4ed1wwcu2seb" path="res://Art/Images/Enemies/Enemy.png" id="2_7p7xp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ulidq"]
radius = 11.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1mpj"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_t1m0n"]
radius = 277.146

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hb741"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u34hd"]
bg_color = Color(0.862745, 0, 0.0941176, 1)

[node name="BaseEnemy" type="CharacterBody2D"]
script = ExtResource("1_pgksw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7p7xp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ulidq")

[node name="AttackBase" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="AttackBase"]
position = Vector2(25, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBase/AttackArea"]
shape = SubResource("RectangleShape2D_g1mpj")

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_t1m0n")
debug_color = Color(0, 0.6, 0.701961, 0.0705882)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 14.0
offset_top = -42.0
offset_right = 18.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_hb741")
theme_override_styles/fill = SubResource("StyleBoxFlat_u34hd")
value = 100.0
fill_mode = 3
show_percentage = false

[connection signal="body_entered" from="AttackBase/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
